--- a/Articles/SFC/Reunioes.org
+++ b/Articles/SFC/Reunioes.org
@@ -62,8 +62,8 @@ Discutir literatura empírica (econométrica) e discutir resultados. Mencionar q
 
 ** Modelo
 - Simulação de redução da taxa de juros
-- Apresentação de curto prazo tal como nas notas do Lucas e encerra apresentando o Lucas
-- Na Fully-adjusted positivo, começa pelo travesse e inicia pela Eq 54
+- Apresentação de curto prazo tal como nas notas do Lucas e encerra apresentando o k (checar)
+- Na Fully-adjusted position, começa pelo travesse e inicia pela Eq 54
 - Derivação dos SF ratio para um apêndice
 - Devem aparecer nos gráficos
   - Eq 60 só como apêndice
@@ -73,6 +73,11 @@ Discutir literatura empírica (econométrica) e discutir resultados. Mencionar q
     - Avisar alteração no texto
 *** TODO Testar mudar o $R$
 - Até o momento isso não tem alterado o resultado
+**** TODO Testar diferentes valores de $\gamma$ tal que o investimento das firmas seja menos volátil que o investimento residencial
+**** TODO Testar com diferentes valores de gCk tal como na nova versão do código
+**** TODO Testar média de crescimento de gCk invés de gIh
+*** TODO Avisar Lucas que $\alpha \neq 1$
+- Foi usada a calibração do Fazzari com $\alpha = 0.5$
 ** Solução analítica
 
 ** Simulações
