--- a/Articles/SFC/refs.bib
+++ b/Articles/SFC/refs.bib
@@ -4951,55 +4951,24 @@
                   theor.pdf:application/pdf}
 }
 
-@inproceedings{freitas_baseline_2019,
-  address =	 {Berlin},
-  title =	 {A {Baseline} {Supermultiplier} {Model} for the
-                  {Analysis} of {Fiscal} {Policy} and {Government}
-                  {Debt}},
-  abstract =	 {The article presents a basic Sraffian
-                  Supermultiplier model for the analysis of fiscal
-                  policy and government debt. We first discuss the
-                  assumptions and the equilibrium and stability
-                  properties of the model. Next, we investigate the
-                  effects on the main endogenous variables of the
-                  model (including the primary government deficit and
-                  debt ratios) of changes in the rate of growth and
-                  composition of autonomous demand, in the tax rates
-                  on profits and wages, and in the rate of
-                  interest. The analysis of the impacts of changes in
-                  the interest rate is conducted according to two
-                  possible closures for the Classical/Sraffian theory
-                  of income distribution. In the first closure the
-                  changes in the rate of interest do not affect income
-                  distribution between wages and profits, which
-                  implies that its influence over the endogenous
-                  variables operates only through the financial
-                  component of total government deficit. The second
-                  closure is the monetary theory of distribution
-                  according to which there is an inverse relationship
-                  between the rate of interest and the wage share. In
-                  this case, besides the pure financial effect, we
-                  show that the change in the rate of interest affects
-                  the economy through the equilibrium value of the
-                  supermultiplier and the tax burden. The analysis is
-                  carried out both for the case in which the interest
-                  rate is lower than the trend rate of growth of
-                  output as well as for the opposite case.},
-  language =	 {en},
-  booktitle =	 {{FMM} {Conference}},
-  author =	 {Freitas, Fabio and Cavalcanti, Rodrigo},
-  year =	 2019,
-  pages =	 30,
-  file =	 {Freitas e Cavalcanti - A Baseline Supermultiplier
-                  Model for the Analysis
-                  .pdf:/home/gpetrini/Zotero/storage/69PN5BDX/Freitas
-                  e Cavalcanti - A Baseline Supermultiplier Model for
-                  the Analysis .pdf:application/pdf;Freitas e
-                  Cavalcanti - A Baseline Supermultiplier Model for
-                  the Analysis
-                  .pdf:/home/gpetrini/Zotero/storage/ZHP75CGR/Freitas
-                  e Cavalcanti - A Baseline Supermultiplier Model for
-                  the Analysis .pdf:application/pdf}
+
+@article{freitas_baseline_2020,
+	title = {A baseline supermultiplier model for the analysis of fiscal policy and government debt},
+	volume = {8},
+	issn = {2049-5331, 2049-5323},
+	url = {https://www.elgaronline.com/view/journals/roke/8-3/roke.2020.03.02.xml},
+	doi = {10.4337/roke.2020.03.02},
+	abstract = {{\textless}section class="abstract"{\textgreater}{\textless}p{\textgreater}The article presents a basic Sraffian supermultiplier model for the analysis of fiscal policy and government debt. First, we discuss the assumptions and the equilibrium and stability properties of the model. Next, we investigate the effects on the main endogenous variables of the model (including the primary government deficit and debt ratios) of changes in the rate of growth and composition of autonomous demand, in the tax rates on profits and wages, and in the rate of interest. The analysis of the impacts of changes in the interest rate is conducted according to two possible closures for the Classical/Sraffian theory of income distribution. In the first closure the changes in the rate of interest do not affect income distribution between wages and profits, which implies that its influence over the endogenous variables operates only through the financial component of total government deficit. The second closure is the monetary theory of distribution, according to which there is an inverse relationship between the rate of interest and the wage share. In this case, besides the pure financial effect, we show that the change in the rate of interest affects the economy through the equilibrium value of the supermultiplier and the tax burden.{\textless}/p{\textgreater}{\textless}/section{\textgreater}},
+	language = {en\_US},
+	number = {3},
+	urldate = {2020-10-12},
+	journal = {Review of Keynesian Economics},
+	author = {Freitas, Fabio and Christianes, Rodrigo},
+	month = jul,
+	year = {2020},
+	note = {Publisher: Edward Elgar Publishing Ltd
+Section: Review of Keynesian Economics},
+	pages = {313--338}
 }
 
 @article{keynes_general_1937,
